fixed z-index issue

--- a/src/styles/artist-view.scss
+++ b/src/styles/artist-view.scss
@@ -4,13 +4,13 @@
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  z-index: -2;
   width: 100%;
   height: 100%;
   display: table;
 
   .main {
     margin: 0 auto;
+    color: $white;
   }
 
   &::before {
@@ -18,8 +18,8 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: -1;
     background-color: rgba(0, 0, 0, 0.8);
+    pointer-events: none;
   }
 
 
